--- a/sidebar.html
+++ b/sidebar.html
@@ -7,7 +7,7 @@
 <body>
     <div class="wrapper">
         <div class="sidebar">
-            <h2>KekW</h2>
+            <h2>RManager</h2>
             <ul>
                 <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
                 <li><a href="#"><i class="fas fa-user"></i>Profile</a></li>
