--- a/sidebar.html
+++ b/sidebar.html
@@ -7,7 +7,7 @@
 <body>
     <div class="wrapper">
         <div class="sidebar">
-            <h2>RManager</h2>
+            <img src="images/logo.png" style="height: 20%; margin-bottom: 30px;">
             <ul>
                 <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
                 <li><a href="#"><i class="fas fa-user"></i>Profile</a></li>
